# Database_cours5

./: .env_simple  .gitignore  README.md  pyproject.toml
src/: db_manager.py  main.py  utils.py  your_database.ini
